k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forkful-app
  labels:
    app: forkful
spec:
  replicas: 2
  selector:
    matchLabels:
      app: forkful
  template:
    metadata:
      labels:
        app: forkful
    spec:
      containers:
        - name: forkful
          image: thanuesh13/food-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
