k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forkful-service
  labels:
    app: forkful
spec:
  type: ClusterIP
  selector:
    app: forkful
  ports:
    - name: http
      port: 80
      targetPort: 8080
